cluster/04-istio-virtual-service/kustomization/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ws-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - ws.do.freetale.me
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - ws.do.freetale.me
    tls:
      mode: SIMPLE
      credentialName: ingress-cert # This should match the Certificate secretName
