cluster/04-istio-virtual-service/kustomization/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ws-service
spec:
  hosts:
  - "*"
  gateways:
  - ws-gateway
  http:
  - name: "ws-server"
    route:
    - destination:
        host: ws-server
        port:
          number: 80
